# teams-transcription-bot

./: .env.example  .gitignore  CLAUDE.md  ESCALATION_MOCK_TRANSCRIBER.md  POC_RESULTS.md  README.md  app.py  debug_conversation_transcriber.py  final_transcriber_test.py  issue_body.md  loud_test.py  mic_permission_test.py  multilingual_transcriber.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_test.py  spanish_youtube_test.json  spanish_youtube_test.txt  startup.sh  teams_transcript_teams_multilingual_20250918_103551.json  teams_transcript_teams_multilingual_20250918_103551.txt  teams_transcript_teams_multilingual_20250918_104105.json  teams_transcript_teams_multilingual_20250918_104105.txt  teams_transcript_teams_multilingual_20250918_104909.json  teams_transcript_teams_multilingual_20250918_104909.txt  teams_transcript_teams_multilingual_20250918_105005.json  teams_transcript_teams_multilingual_20250918_105005.txt  test_auth_poc.py  test_permissions.py  test_teams_bot_multilingual.py  test_transcriber.py  transcript_session_20250918_102719.json  transcript_session_20250918_102719.txt  transcript_to_file.py  working_transcriber.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/middleware/: __init__.py
src/api/models/: __init__.py  meeting.py  responses.py  transcript.py
src/api/routers/: __init__.py  health.py  meetings.py  transcripts.py
src/api/services/: __init__.py  storage_service.py  transcript_service.py
src/audio/: __init__.py
src/auth/: __init__.py  msal_client.py
src/bot/: __init__.py  config.py  teams_bot.py
src/graph_api/: __init__.py
src/transcription/: __init__.py  azure_speech_transcriber.py  simple_transcriber.py  speech_transcriber.py  teams_multilingual_transcriber.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
terraform/environments/dev/: backend.tf  main.tf
terraform/environments/prod/: backend.tf  main.tf
terraform/environments/staging/: backend.tf  main.tf
terraform/modules/app_service/: main.tf  outputs.tf  variables.tf
terraform/modules/azure_ad/: main.tf  outputs.tf  variables.tf
terraform/modules/bot_service/: main.tf  outputs.tf  variables.tf
terraform/modules/cognitive_services/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/key_vault/: main.tf  outputs.tf  variables.tf  versions.tf  versions.tf.bak
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf  versions.tf.bak
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_project_structure.py  test_terraform_validation.py
tests/api/: __init__.py  test_main.py  test_structure.py
tests/integration/: test_azure_infrastructure.py  test_teams_multilingual_core.py
tests/unit/: test_auth.py  test_bot.py
